Bug 32156 - [4.3 Regression] ICE with characters
Summary: [4.3 Regression] ICE with characters
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2007-05-30 14:02 UTC by Joost VandeVondele
Modified: 2007-05-31 21:13 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work: 4.1.3 4.2.0
Known to fail: 4.3.0
Last reconfirmed: 2007-05-30 16:36:03


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joost VandeVondele 2007-05-30 14:02:31 UTC
generates an ICE, I think it is a regression

write (*,'(2A3)') 'X'//(/"1","2"/)//'Y'
END
Comment 1 Tobias Burnus 2007-05-30 16:36:03 UTC
Yes, it is indeed a regression, which was introduced between
2007-05-25-r125057 and 2007-05-29-r125159.

==26453==    at 0x474E05: gfc_add_loop_ss_code (trans-array.c:1638)
==26453==    by 0x475495: gfc_conv_loop_setup (trans-array.c:3288)
==26453==    by 0x494070: gfc_trans_transfer (trans-io.c:1969)
==26453==    by 0x46D2C4: gfc_trans_code (trans.c:690)
Comment 2 Paul Thomas 2007-05-31 06:26:21 UTC
(In reply to comment #1)
> Yes, it is indeed a regression, which was introduced between
> 2007-05-25-r125057 and 2007-05-29-r125159.
...and is almost certainly my doing - damn!

I am on to it

Paul
Comment 3 Paul Thomas 2007-05-31 09:19:16 UTC
(In reply to comment #2)

Yes - it's r125088 that is responsible for the regression.

Paul
Comment 4 Tobias Burnus 2007-05-31 17:01:38 UTC
> Yes - it's r125088 that is responsible for the regression.
http://gcc.gnu.org/ml/gcc-cvs/2007-05/msg00788.html
Comment 5 Paul Thomas 2007-05-31 21:11:48 UTC
Subject: Bug 32156

Author: pault
Date: Thu May 31 21:11:31 2007
New Revision: 125240

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=125240
Log:
2007-05-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/32156
	* trans-array.c (gfc_trans_array_constructor): Treat the case
	where the ss expression charlen is missing.

2007-05-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/32156
	* gfortran.dg/char_array_constructor_3.f90: New test.

Added:
    trunk/gcc/testsuite/gfortran.dg/char_array_constructor_3.f90
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/testsuite/ChangeLog

Comment 6 Paul Thomas 2007-05-31 21:12:20 UTC
Subject: Bug 32156

Author: pault
Date: Thu May 31 21:12:10 2007
New Revision: 125241

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=125241
Log:
2007-05-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/32156
	* trans-array.c (gfc_trans_array_constructor): Treat the case
	where the ss expression charlen is missing.

2007-05-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/32156
	* gfortran.dg/char_array_constructor_3.f90: New test.

Modified:
    trunk/gcc/fortran/trans-array.c

Comment 7 Paul Thomas 2007-05-31 21:13:18 UTC
Fixed as 'obvious'.

Paul