2007-05-31  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/32156
	* trans-array.c (gfc_trans_array_constructor): Treat the case
	where the ss expression charlen is missing.

2007-05-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/32156
	* gfortran.dg/char_array_constructor_3.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@125241 138bc75d-0d04-0410-961f-82ee72b054a4