gcc/fortran/trans-array.c
@@ -1635,8 +1635,18 @@ gfc_trans_array_constructor (gfc_loopinfo * loop, gfc_ss * ss)
       if (!ss->string_length)
 	gfc_todo_error ("complex character array constructors");
 
-      ss->expr->ts.cl->backend_decl = ss->string_length;
+      /* It is surprising but still possible to wind up with expressions that
+	 lack a character length.
+	 TODO Find the offending part of the front end and cure this properly.
+	 Concatenation involving arrays is the main culprit.  */
+      if (!ss->expr->ts.cl)
+	{
+	  ss->expr->ts.cl = gfc_get_charlen ();
+	  ss->expr->ts.cl->next = gfc_current_ns->cl_list;
+	  gfc_current_ns->cl_list = ss->expr->ts.cl->next;
+	}
 
+      ss->expr->ts.cl->backend_decl = ss->string_length;
 
       type = gfc_get_character_type_len (ss->expr->ts.kind, ss->string_length);
       if (const_string)
